Bug 346839 - Switching off the visibility of query fields hides data in the last field
Summary: Switching off the visibility of query fields hides data in the last field
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Queries (other bugs)
Version First Reported In: 2.9.4
Platform: Other Linux
: NOR normal
Target Milestone: 2.9.11
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-28 13:00 UTC by Albrecht Will
Modified: 2016-03-03 22:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.11
Sentry Crash Report:


Attachments
reduced database for Bug 346839 (444.00 KB, application/octet-stream)
2015-04-29 12:27 UTC, Albrecht Will
Details
1 of 4 img. (49.68 KB, image/png)
2015-04-29 12:30 UTC, Albrecht Will
Details
2. of 4 img. (24.51 KB, image/png)
2015-04-29 12:30 UTC, Albrecht Will
Details
3. of 4 img. (26.16 KB, image/png)
2015-04-29 12:31 UTC, Albrecht Will
Details
4. of 4 img. (110.25 KB, image/png)
2015-04-29 12:31 UTC, Albrecht Will
Details
bug reproduced in 2.9.4 (26.88 KB, image/png)
2015-05-18 07:11 UTC, Albrecht Will
Details
1 (32.29 KB, image/png)
2015-11-13 15:06 UTC, Albrecht Will
Details
2 (30.66 KB, image/png)
2015-11-13 15:07 UTC, Albrecht Will
Details
3 (29.71 KB, image/png)
2015-11-13 15:07 UTC, Albrecht Will
Details
4 (14.39 KB, image/png)
2015-11-13 15:07 UTC, Albrecht Will
Details
Minimal .kexi test file (11.00 KB, application/x-kexiproject-sqlite2)
2016-01-16 14:44 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albrecht Will 2015-04-28 13:00:38 UTC
"query 1"  shows 2 filters, datas odf query 1 shows the result. 
in "query" I switched to fields to unvisibly. Then look at the "datas of query 2"
No datas in "strasse_neu" present.

Reproducible: Always

Steps to Reproduce:
1. erasing the complet query and making a new one.
2.same steps
3.same result

Actual Results:  
Look at the details

Expected Results:  
showing the invisible datas

Please let the last settings unchanged if you open settings of the query. 
till now, when i open the settings they look like in the beginning with unswiched fields (the red marks in "query 2"
Comment 1 Jarosław Staniek 2015-04-28 13:20:24 UTC
Many thanks Albrecht. The best persistent place for attachment is under the link 'Add an attachment' below.
Comment 2 Jarosław Staniek 2015-04-28 18:41:50 UTC
Albrecht, could you please also attach the .kexi file co we won't have to "invent" a copy again?
I tried but failed.
Comment 3 Albrecht Will 2015-04-29 12:27:43 UTC
Created attachment 92319 [details]
reduced database for Bug 346839
Comment 4 Albrecht Will 2015-04-29 12:30:15 UTC
Created attachment 92320 [details]
1 of 4 img.
Comment 5 Albrecht Will 2015-04-29 12:30:38 UTC
Created attachment 92321 [details]
2. of 4 img.
Comment 6 Albrecht Will 2015-04-29 12:31:00 UTC
Created attachment 92322 [details]
3. of 4 img.
Comment 7 Albrecht Will 2015-04-29 12:31:16 UTC
Created attachment 92323 [details]
4. of 4 img.
Comment 8 Jarosław Staniek 2015-04-29 19:20:09 UTC
Thanks for the files!
Comment 9 Albrecht Will 2015-05-09 07:28:29 UTC
The bug concerns in every case the last row of the request. Today checked with version 2.9.3
Comment 10 Albrecht Will 2015-05-18 07:11:22 UTC
Created attachment 92681 [details]
bug reproduced in 2.9.4
Comment 11 Albrecht Will 2015-11-13 15:05:54 UTC
The bug appears again in 2.9.9.
I send some scrrenshots.
picture 1+2 = all fields ar shown
picture 3+4 (2 fields changed to unvisible) = the last field shows no datas
Comment 12 Albrecht Will 2015-11-13 15:06:54 UTC
Created attachment 95477 [details]
1
Comment 13 Albrecht Will 2015-11-13 15:07:10 UTC
Created attachment 95478 [details]
2
Comment 14 Albrecht Will 2015-11-13 15:07:23 UTC
Created attachment 95479 [details]
3
Comment 15 Albrecht Will 2015-11-13 15:07:39 UTC
Created attachment 95480 [details]
4
Comment 16 Albrecht Will 2015-12-31 09:24:31 UTC
At the last day of 2015 I note, that the bug unfortunatly is NOT solved.
It is very necessary.

All my best wishes for you all.
Comment 17 Jarosław Staniek 2015-12-31 09:32:54 UTC
Setting as fixes for 2.9.11 - just for YOU :)
Comment 18 Jarosław Staniek 2015-12-31 09:33:23 UTC
Best wishes and happy Kexi using in 2016!
Comment 19 Jarosław Staniek 2016-01-16 13:34:18 UTC
Confirmed. Another issue is that changes to the visibility flag is not retained.
Comment 20 Jarosław Staniek 2016-01-16 14:44:13 UTC
Created attachment 96684 [details]
Minimal .kexi test file
Comment 21 Jarosław Staniek 2016-01-16 22:55:08 UTC
A fix for SQLite is almost ready: https://phabricator.kde.org/D829. Other backends would be fixed separately.
Comment 22 Jarosław Staniek 2016-01-17 00:25:44 UTC
For MySQL: the same error - to be fixed
For PostgreSQL: crash
Comment 23 Jarosław Staniek 2016-01-18 00:40:11 UTC
Query Designer fixed for SQLite/MySQL/PostreSQL/Sybase. In review now.
Comment 24 Jarosław Staniek 2016-01-19 21:14:06 UTC
Git commit 04017e15d00ba770cf82f9afc3f2d7de292468ea by Jaroslaw Staniek.
Committed on 19/01/2016 at 20:51.
Pushed by staniek into branch 'calligra/2.9'.

Fix Kexi/CalligraDB: Switching off the visibility of query fields hides data in the last field

Summary:
This is a fix for Query Designer with SQLite/MySQL/PostreSQL/Sybase.

See https://bugs.kde.org/attachment.cgi?id=96684 for test file
FIXED-IN:2.9.11

Test Plan:
Try the minimal example from https://bugs.kde.org/attachment.cgi?id=96684, open query1 in design mode, set Visible=off for id and a fields, switch to data view.
Field b has data loaded after this fix.

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D829

M  +12   -12   kexi/kexidb/drivers/mysql/mysqlcursor.cpp
M  +2    -3    kexi/kexidb/drivers/pqxx/pqxxcursor.cpp
M  +5    -5    kexi/kexidb/drivers/sybase/sybasecursor.cpp
M  +7    -7    libs/db/cursor.cpp
M  +2    -2    libs/db/cursor.h
M  +6    -18   libs/db/drivers/sqlite/sqlitecursor.cpp
M  +31   -17   libs/db/queryschema.cpp
M  +13   -3    libs/db/queryschema.h
M  +15   -1    libs/db/queryschema_p.cpp
M  +10   -1    libs/db/queryschema_p.h

http://commits.kde.org/calligra/04017e15d00ba770cf82f9afc3f2d7de292468ea
Comment 25 Jarosław Staniek 2016-01-19 21:29:06 UTC
Landed!
Comment 26 Jarosław Staniek 2016-02-29 23:21:29 UTC
Git commit a1d47334f8ae29067c02a039d118eca3e5c4f58d by Jaroslaw Staniek.
Committed on 29/02/2016 at 23:16.
Pushed by staniek into branch 'master'.

Fix: Switching off the visibility of query fields hides data in the last field

This is a fix for Query Designer with SQLite/MySQL/PostreSQL/Sybase.

See https://bugs.kde.org/attachment.cgi?id=96684 for test file
FIXED-IN:2.9.11

Test Plan:
Try the minimal example from https://bugs.kde.org/attachment.cgi?id=96684, open query1 in design mode, set Visible=off for id and a fields, switch to data view.
Field b has data loaded after this fix.

Differential Revision: https://phabricator.kde.org/D829

(from calligra.git)

M  +9    -8    src/KDbCursor.cpp
M  +3    -3    src/KDbCursor.h
M  +31   -16   src/KDbQuerySchema.cpp
M  +19   -3    src/KDbQuerySchema.h
M  +15   -1    src/KDbQuerySchema_p.cpp
M  +10   -1    src/KDbQuerySchema_p.h
M  +11   -12   src/drivers/mysql/MysqlCursor.cpp
M  +3    -3    src/drivers/postgresql/PostgresqlCursor.cpp
M  +6    -14   src/drivers/sqlite/SqliteCursor.cpp
M  +6    -5    src/drivers/sybase/SybaseCursor.cpp

http://commits.kde.org/kdb/a1d47334f8ae29067c02a039d118eca3e5c4f58d