Fix Kexi/CalligraDB: Switching off the visibility of query fields hides data in the last field

Summary:
This is a fix for Query Designer with SQLite/MySQL/PostreSQL/Sybase.

See https://bugs.kde.org/attachment.cgi?id=96684 for test file
BUG:346839
FIXED-IN:2.9.11

Test Plan:
Try the minimal example from https://bugs.kde.org/attachment.cgi?id=96684, open query1 in design mode, set Visible=off for id and a fields, switch to data view.
Field b has data loaded after this fix.

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D829