libs/db/queryschema_p.h
@@ -1,5 +1,5 @@
 /* This file is part of the KDE project
-   Copyright (C) 2003-2012 Jarosław Staniek <staniek@kde.org>
+   Copyright (C) 2003-2016 Jarosław Staniek <staniek@kde.org>
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public
@@ -104,6 +104,9 @@ public:
     /*! Temporary field vector for using in fieldsExpanded() */
     QueryColumnInfo::Vector *fieldsExpanded;
 
+    /*! Like fieldsExpanded but only visible column infos; infos are not owned. */
+    QueryColumnInfo::Vector *visibleFieldsExpanded;
+
     /*! Temporary field vector containing internal fields used for lookup columns. */
     QueryColumnInfo::Vector *internalFields;
 
@@ -111,9 +114,15 @@ public:
      Contains not auto-deleted items.*/
     QueryColumnInfo::Vector *fieldsExpandedWithInternalAndRowID;
 
+    /*! Like fieldsExpandedWithInternalAndRowID but only contains visible column infos; infos are not owned.*/
+    QueryColumnInfo::Vector *visibleFieldsExpandedWithInternalAndRowID;
+
     /*! Temporary, used to cache sum of expanded fields and internal fields used for lookup columns.
      Contains not auto-deleted items.*/
     QueryColumnInfo::Vector *fieldsExpandedWithInternal;
+
+    /*! Like fieldsExpandedWithInternal but only contains visible column infos; infos are not owned.*/
+    QueryColumnInfo::Vector *visibleFieldsExpandedWithInternal;
 
     /*! A list of fields for ORDER BY section. @see QuerySchema::orderByColumnList(). */
     OrderByColumnList* orderByColumnList;
